# ActionGameContestProject

./: .gitignore  ContestProject.cryproject  LICENSE  README.md
Assets/: default sequence
Assets/Animations/: CompressionPresets.json  DBATable.json  skeletonlist.xml  skeletonlist.xml.cryasset
Assets/Animations/FaceAnimation/: BodyAnim.caf  BodyAnim.caf.cryasset  FaceAnim.caf  FaceAnim.caf.cryasset  bodyanim.animsettings  tweak.animsettings  tweak.caf  tweak.caf.cryasset
Assets/Animations/Mannequin/ADB/: Face.adb  FaceControllerDefinition.xml  FaceControllerDefinition.xml.cryasset  FaceFragmentIds.xml  FaceFragmentIds.xml.cryasset  FaceTags.xml.cryasset  Panda.adb  PandaControllerDefinition.xml  PandaControllerDefinition.xml.cryasset  PandaFragmentIds.xml  PandaFragmentIds.xml.cryasset  PandaTags.xml.cryasset
Assets/Animations/Mannequin/Preview/: Face.xml  Face.xml.cryasset  Panda.xml  Panda.xml.cryasset
Assets/Animations/PandaAnimations/: Idle.caf  Idle.caf.cryasset  Run.caf  Run.caf.cryasset  Walk.caf  Walk.caf.cryasset  idle.animsettings  pandaanimevents.animevents
Assets/Animations/PandaAnimations/bspace/: 1DONE-BSpace_forward.bspace
Assets/levels/: bigworld.cry.cryasset  example.cry.cryasset  level1.cry.cryasset  sc1.cry.cryasset
Assets/levels/BigWorld/: BigWorld.bak  BigWorld.bak2  BigWorld.cry  BigWorld.cry.cryasset  filelist.xml  level.pak
Assets/levels/BigWorld/Layers/: Main.bak  Main.bak2  main.lyr
Assets/levels/BigWorld/leveldata/: Environment.xml  Objectives.xml  TimeOfDay.bak  TimeOfDay.bak2  TimeOfDay.xml
Assets/levels/SC1/: SC1.bak  SC1.bak2  SC1.cry  SC1.cry.cryasset  filelist.xml  level.pak
Assets/levels/SC1/Layers/: Main.bak  main.lyr
Assets/levels/SC1/leveldata/: Objectives.xml  TimeOfDay.bak  TimeOfDay.bak2  TimeOfDay.xml
Assets/levels/example/: example.bak2  example.cry  example.cry.cryasset  filelist.xml  level.pak
Assets/levels/example/layers/: Main.bak2  main.lyr
Assets/levels/example/leveldata/: Heightmap.bak  Heightmap.bak2  (+1 more)
Assets/levels/level1/: filelist.xml  level.pak  level1.bak  level1.bak2  level1.cry  level1.cry.cryasset  terraintexture.pak
Assets/libs/: p1.pfx.cryasset  p2.pfx.cryasset
Assets/libs/MaterialEffects/: SurfaceTypes.xml.cryasset
Assets/libs/config/: defaultprofile.xml.cryasset
Assets/libs/environmentpresets/: bigworld.xml.cryasset  example.xml  example.xml.cryasset  level1.xml  level1.xml.cryasset  sc1.xml.cryasset
Assets/libs/flownodes/: FlownodeBlacklist.xml.cryasset  Substitutions.xml.cryasset
Assets/objects/: glass01.mtl  glass01.mtl.cryasset  helper_illum.mtl.cryasset  scrolluv.mtl  scrolluv.mtl.cryasset  sfmat01.mtl  sfmat01.mtl.cryasset  sphere.cgf.cryasset  sphere.mtl.cryasset  vcolor.mtl  vcolor.mtl.cryasset  vcolor2.mtl.cryasset
Assets/scripts/: GameObjectSerializationOrder.xml.cryasset
Assets/scripts/AI/: Factions.xml.cryasset
Assets/textures/: white.dds.cryasset  white.tif
Assets/textures/CharacterTexures/: PandaDiff.tif  pandadiff.dds  pandadiff.dds.cryasset
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  StdAfx.h
Code/Components/: EnemyCharacterController.cpp  EnemyCharacterController.h  FootstepQueue.cpp  FootstepQueue.h  GameCommon.cpp  Player.cpp  Player.h  PlayerCharacterController.cpp  PlayerCharacterController.h  ProximityTrigger.cpp  ProximityTrigger.h  SimpleGeom.cpp  SimpleGeom.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  UnifiedCamera.cpp  UnifiedCamera.h  UnifiedCharacterAnimation.cpp  UnifiedCharacterAnimation.h  UnifiedCharacterController.cpp  UnifiedCharacterController.h
(+54 files in other folders)
